crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__unused_binding_has_unnecessary_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 4
        },
        "end": {
          "line": 1,
          "character": 5
        }
      },
      "severity": 4,
      "code": "unused-binding",
      "source": "ty",
      "message": "This binding is unused",
      "tags": [
        1
      ]
    }
  ]
}
